# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingexts--head--0.7
#

2005-01-30 00:53:01 GMT	John Goerzen <jgoerzen@complete.org>	patch-10

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-10


    modified files:
     ChangeLog Python/Instances.hs Python/Utils.hs
     {arch}/=tagging-method


2005-01-30 00:34:09 GMT	John Goerzen <jgoerzen@complete.org>	patch-9

    Summary:
      checkpointing
    Revision:
      missingexts--head--0.7--patch-9


    modified files:
     ChangeLog MissingPy.cabal Python/Instances.hs Python/Types.hs


2005-01-30 00:22:11 GMT	John Goerzen <jgoerzen@complete.org>	patch-8

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-8


    modified files:
     ChangeLog Python/Instances.hs


2005-01-30 00:15:42 GMT	John Goerzen <jgoerzen@complete.org>	patch-7

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-7


    new files:
     Python/Instances.hs Python/Utils.hs

    modified files:
     ChangeLog MissingPy.cabal Python/Types.hs


2005-01-30 00:10:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-6

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-6


    new files:
     Python/Interpreter.hs

    removed files:
     Python/Interpreter.hs

    modified files:
     ChangeLog MissingPy.cabal Python/Types.hs


2005-01-29 23:53:20 GMT	John Goerzen <jgoerzen@complete.org>	patch-5

    Summary:
      Checkpointing
    Revision:
      missingexts--head--0.7--patch-5


    new files:
     glue/.arch-ids/=id glue/glue.h

    removed files:
     glue/.arch-ids/=id

    modified files:
     ChangeLog MissingPy.cabal Python/Types.hs glue/glue.c

    renamed files:
     Python/Types.hsc
       ==> Python/Types.hs
     glue/glue.c
       ==> glue/glue.c

    new directories:
     glue

    removed directories:
     glue
